--- a/restaurant.html
+++ b/restaurant.html
@@ -387,7 +387,10 @@
       <!-- /.modal-dialog -->
     </div>
     <script src="js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
 
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
   </body>
 </html>
