--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Шапка сайта -->
       <header class="header">
         <!-- Логотип -->
-        <a href="index.html" class="logo"
+        <a class="logo"
           ><img src="css\img\logo.svg" alt="logo" class="logo footer-logo"
         /></a>
         <!-- Поле поиска -->
@@ -64,12 +64,14 @@
     <!-- /.container -->
     <main class="main">
       <div class="container">
-        <section class="promo">
-          <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
-          <p class="promo-text">
-            Блюда из любимого ресторана привезет курьер в перчатках, маске и с
-            антисептиком
-          </p>
+        <section class="container-promo">
+          <section class="promo">
+            <h1 class="promo-title">Онлайн-сервис <br />доставки еды на дом</h1>
+            <p class="promo-text">
+              Блюда из любимого ресторана привезет курьер в перчатках, маске и с
+              антисептиком
+            </p>
+          </section>
         </section>
 
         <section class="restaurants">
@@ -81,195 +83,17 @@
               placeholder="Поиск блюд и ресторанов"
             />
           </section>
-          <div class="cards">
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.2s"
-            >
-              <img
-                src="css\img\card-image-1.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Пицца плюс</h3>
-                  <span class="card-tag tag">50 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />4.5
-                  </div>
-                  <div class="price">От 900 Р</div>
-                  <div class="category">Пицца</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.4s"
-            >
-              <img
-                src="css\img\card-image-2.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Тануки</h3>
-                  <span class="card-tag tag">90 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />4.9
-                  </div>
-                  <div class="price">От 1000 Р</div>
-                  <div class="category">Суши и многое другое</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.6s"
-            >
-              <img
-                src="css\img\card-image-3.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">FoodBand</h3>
-                  <span class="card-tag tag">50 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />4.3
-                  </div>
-                  <div class="price">От 400 Р</div>
-                  <div class="category">Пицца</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.2s"
-            >
-              <img
-                src="css\img\card-image-4.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Жадина-пицца</h3>
-                  <span class="card-tag tag">70 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />4.7
-                  </div>
-                  <div class="price">От 800 Р</div>
-                  <div class="category">Пицца</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.4s"
-            >
-              <img
-                src="css\img\card-image-5.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Точка еды</h3>
-                  <span class="card-tag tag">30 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />4.0
-                  </div>
-                  <div class="price">От 300 Р</div>
-                  <div class="category">Суши</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-            <a
-              href="restaurant.html"
-              target="_blank"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.6s"
-            >
-              <img
-                src="css\img\card-image-6.jpg"
-                alt="image"
-                class="card-image"
-              />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">PizzaBurger</h3>
-                  <span class="card-tag tag">80 минут</span>
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img
-                      src="css\img\rating.svg"
-                      alt="rating"
-                      class="rating-star"
-                    />
-                    4.8
-                  </div>
-                  <div class="price">От 800 Р</div>
-                  <div class="category">Пицца</div>
-                </div>
-                <!-- /.card-info -->
-              </div>
-            </a>
-            <!-- /.card -->
-          </div>
+          <div class="cards cards-restaurants"></div>
+          <!-- /.cards -->
+        </section>
+      </div>
+    </main>
+
+    <main class="main menu hide">
+      <div class="container">
+        <section class="restaurants">
+          <section class="section-heading restaurant-info-heading"></section>
+          <div class="cards cards-goods"></div>
           <!-- /.cards -->
         </section>
       </div>
@@ -334,6 +158,7 @@
       </div>
       <!-- /.modal-dialog -->
     </div>
+
     <!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
     <script src="js/wow.min.js"></script>
 
