--- a/index.html
+++ b/index.html
@@ -49,14 +49,15 @@
             <span class="button-text" id="login-button-text">Войти</span>
           </button>
 
-          <!-- <button class="button">
+          <button class="button cart-button hide">
             <img class="button-icon" src="css\img\shop.svg" alt="Shop" />
 
             <span class="button-text">Корзина</span>
-          </button> -->
+          </button>
           <button class="button button-primary button-out">
+            <!-- <img class="button-icon" src="icon\logout.svg" alt="Shop" /> -->
+            <img class="button-icon" src="css\img\user.svg" alt="User" />
             <span class="button-text">Выйти</span>
-            <span class="button-out-svg"></span>
           </button>
         </div>
       </header>
@@ -154,6 +155,28 @@
             </div>
           </div>
         </form>
+        <!-- /.modal-footer -->
+      </div>
+      <!-- /.modal-dialog -->
+    </div>
+
+    <div class="modal modal-cart">
+      <div class="modal-dialog">
+        <div class="modal-header">
+          <h3 class="modal-title">Корзина</h3>
+          <button class="close modal-cart-close">&times;</button>
+          <!-- &times; - спецсимвол, крестик -->
+        </div>
+
+        <div class="modal-body-cart"></div>
+        <!-- /.modal-body -->
+        <div class="modal-footer">
+          <span class="modal-price-tag"></span>
+          <div class="modal-footer-buttons">
+            <button class="button button-primary">Оформить заказ</button>
+            <button class="button button-clear-cart">Отмена</button>
+          </div>
+        </div>
         <!-- /.modal-footer -->
       </div>
       <!-- /.modal-dialog -->
