поправила путь к файлам

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css\normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css\animate.css" />
+    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/animate.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
@@ -25,7 +25,7 @@
       <header class="header">
         <!-- Логотип -->
         <a class="logo"
-          ><img src="css\img\logo.svg" alt="logo" class="logo footer-logo"
+          ><img src="css/img/logo.svg" alt="logo" class="logo footer-logo"
         /></a>
         <!-- Поле поиска -->
         <input
@@ -40,7 +40,7 @@
           <button class="button button-primary button-auth">
             <img
               class="button-icon"
-              src="css\img\user.svg"
+              src="css/img/user.svg"
               alt="User"
               id="button-icon-img"
             />
@@ -50,13 +50,13 @@
           </button>
 
           <button class="button cart-button hide">
-            <img class="button-icon" src="css\img\shop.svg" alt="Shop" />
+            <img class="button-icon" src="css/img/shop.svg" alt="Shop" />
 
             <span class="button-text">Корзина</span>
           </button>
           <button class="button button-primary button-out">
-            <!-- <img class="button-icon" src="icon\logout.svg" alt="Shop" /> -->
-            <img class="button-icon" src="css\img\user.svg" alt="User" />
+            <!-- <img class="button-icon" src="icon/logout.svg" alt="Shop" /> -->
+            <img class="button-icon" src="css/img/user.svg" alt="User" />
             <span class="button-text">Выйти</span>
           </button>
         </div>
@@ -104,7 +104,7 @@
       <div class="container">
         <div class="footer-block">
           <a href="index.html" class="logo"
-            ><img src="css\img\logo.svg" alt="logo" class="logo footer-logo"
+            ><img src="css/img/logo.svg" alt="logo" class="logo footer-logo"
           /></a>
           <nav class="footer-nav">
             <a href="#" class="footer-link">Ресторанам </a
@@ -115,16 +115,16 @@
           <div class="social-links">
             <a href="#" class="social-link"
               ><img
-                src="css\img\insta.svg"
+                src="css/img/insta.svg"
                 alt="instagram"
                 class="social-link-logo" /></a
             ><a href="#" class="social-link"
               ><img
-                src="css\img\fb.svg"
+                src="css/img/fb.svg"
                 alt="facebook"
                 class="social-link-logo" /></a
             ><a href="#" class="social-link"
-              ><img src="css\img\vk.svg" alt="vk" class="social-link-logo"
+              ><img src="css/img/vk.svg" alt="vk" class="social-link-logo"
             /></a>
           </div>
         </div>
